vertical align next steps, fix flowcharts border box on regulatory

--- a/style.less
+++ b/style.less
@@ -2328,7 +2328,7 @@ h1.automatic-sub-page-title.jsonContentLoadedFadeIn{
     
     // position vertically approximately where the last "Next steps" section is
     position: relative;
-    top: calc(-78.1px - 4vw) !important;
+    top: calc(-30px - 4vw) !important;
   }
   
 }
@@ -2360,6 +2360,7 @@ h1.automatic-sub-page-title.jsonContentLoadedFadeIn{
 {
   border: 1px solid var(--current-service-color) !important;
   padding:4px; //TODO CHECK other boxes
+  box-sizing: border-box; // weird glitch only on regulatory infographics. Fix by adding this
 }
 
 
